--- a/PABD_FINAL/App.config
+++ b/PABD_FINAL/App.config
@@ -6,6 +6,9 @@
         <add name="PABD_FINAL.Properties.Settings.Atim_MoviesConnectionString"
             connectionString="Data Source=MSI;Initial Catalog=Atim_Movies;User ID=sa;Password=eki123"
             providerName="System.Data.SqlClient" />
+        <add name="PABD_FINAL.Properties.Settings.AtimConnectionString"
+            connectionString="Data Source=MSI;Initial Catalog=Atim;Persist Security Info=True;User ID=sa;Password=eki123"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
