--- a/PABD_FINAL/Properties/Settings.settings
+++ b/PABD_FINAL/Properties/Settings.settings
@@ -10,5 +10,13 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=MSI;Initial Catalog=Atim_Movies;User ID=sa;Password=eki123</Value>
     </Setting>
+    <Setting Name="AtimConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
+  &lt;ConnectionString&gt;Data Source=MSI;Initial Catalog=Atim;Persist Security Info=True;User ID=sa;Password=eki123&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=MSI;Initial Catalog=Atim;Persist Security Info=True;User ID=sa;Password=eki123</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
